gitops/applications/dev/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mock-app
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: mock-eks
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
        app.kubernetes.io/part-of: mock-eks
    spec:
      containers:
        - name: backend
          image: 296725355870.dkr.ecr.ap-southeast-1.amazonaws.com/hungnm-de000155-dev-backend:5c460a4e4723
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
